AR-21: Adding CRUD methods for creating project
